--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "react": "16.13.1",
@@ -25,7 +26,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
